<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.bigbase</groupId>
    <artifactId>BigBase2</artifactId>
    <packaging>pom</packaging>
    <name>BigBase2</name>
    <version>1.0.0</version>
    <url>http://www.server.com</url>
    <modules>
        <module>row-cache</module>
        <!--module>block-cache</module-->
        <module>dist</module>
  </modules>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.4.1</version>
           </plugin>
              <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                </configuration>
            </plugin>
	     <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>2.4</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>2.1.2</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
     	    <plugin>
       		<groupId>org.apache.maven.plugins</groupId>
       		<artifactId>maven-jar-plugin</artifactId>
       		<version>2.4</version>
       		<executions>
         		<execution>
           		<goals>
             			<goal>test-jar</goal>
           		</goals>
         		</execution>
       		</executions>
     	    </plugin>
   	    <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M5</version>
                <configuration>
                    <argLine>-Xmx4g --add-opens java.base/java.nio=ALL-UNNAMED</argLine>
                    <redirectTestOutputToFile>true</redirectTestOutputToFile>
                    <forkCount>1</forkCount>
                    <reuseForks>false</reuseForks>
                    <excludes>
                    </excludes>
                    <systemProperties>
                        <property>
                            <name>surefire</name>
                            <value>true</value>
                        </property>
                    </systemProperties>
                    <systemPropertyVariables>
                        <property>
                            <name>configurationFile</name>
                            <value>${project.build.directory}/conf/log4j2-console.xml</value>
                        </property>
                    </systemPropertyVariables>
                </configuration>
            </plugin>
    </plugins>
    <resources>
     </resources> 
    </build>
    <dependencyManagement>
        <dependencies>
           <dependency>
		<groupId>com.carrotdata</groupId>
    		<artifactId>carrot-cache</artifactId>
    		<version>0.16.1</version>
           </dependency>
	   <dependency>
    		<groupId>org.bigbase</groupId>
    		<artifactId>sidecar</artifactId>
    		<version>0.6.0</version>
           </dependency>	
           <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-core</artifactId>
                <version>2.17.2</version>
                <!--type>pom</type-->
           </dependency>
           <dependency>
            	<groupId>junit</groupId>
            	<artifactId>junit</artifactId>
            	<version>4.12</version>
            	<scope>test</scope>
           </dependency>
           <dependency>
                <groupId>com.esotericsoftware.kryo</groupId>
                <artifactId>kryo5</artifactId>
                <version>5.3.0</version>
           </dependency>
           <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-math3</artifactId>
                <version>3.6.1</version>
                <scope>test</scope>
        </dependency>
        <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>3.4</version>
        </dependency>
       <dependency>
                <groupId>com.amazonaws</groupId>
                <artifactId>aws-java-sdk-bundle</artifactId>
                <version>1.11.271</version>
        </dependency>
        </dependencies>
    </dependencyManagement>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <hbase.version>2.6.1</hbase.version>
        <hadoop.version>2.10.2</hadoop.version>
    </properties>
</project>

